# mcp-template

./: .gitignore  LICENSE  README.md  mcp-guard  mcp-health  mcp-seal-creds  new-mcp
mcp-common/: bootstrap.sh  package-lock.json  package.json
mcp-common/patches/: apply.sh  stdioToStatefulStreamableHttp.js
skeleton/: .gitignore  pyproject.toml
skeleton/app/: config.py  main.py
skeleton/app/tools/: example.py
skeleton/config/: .env.example
systemd/: mcp-guard.service  mcp-guard.timer  mcp.service.example
